# gpt-2

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: gpt2_demo.py  gpt2_from_scratch.py  inference.py  load_dataset.py  test_gpt2_from_scratch.py
